; ModuleID = '/home/carl/AnghaBench/h2o/deps/quicly/lib/extr_quicly.c_setup_handshake_space_and_flow.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/quicly/lib/extr_quicly.c_setup_handshake_space_and_flow.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.st_quicly_handshake_space_t*, %struct.st_quicly_handshake_space_t* }
%struct.st_quicly_handshake_space_t = type { i32 }

@QUICLY_EPOCH_INITIAL = common dso_local global i64 0, align 8
@PTLS_ERROR_NO_MEMORY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*, i64)* @setup_handshake_space_and_flow to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @setup_handshake_space_and_flow(%struct.TYPE_4__* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_4__*, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.st_quicly_handshake_space_t**, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = load i64, i64* %5, align 8
  %8 = load i64, i64* @QUICLY_EPOCH_INITIAL, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %13

10:                                               ; preds = %2
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 1
  br label %16

13:                                               ; preds = %2
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  br label %16

16:                                               ; preds = %13, %10
  %17 = phi %struct.st_quicly_handshake_space_t** [ %12, %10 ], [ %15, %13 ]
  store %struct.st_quicly_handshake_space_t** %17, %struct.st_quicly_handshake_space_t*** %6, align 8
  %18 = call i64 @alloc_pn_space(i32 4)
  %19 = inttoptr i64 %18 to i8*
  %20 = bitcast i8* %19 to %struct.st_quicly_handshake_space_t*
  %21 = load %struct.st_quicly_handshake_space_t**, %struct.st_quicly_handshake_space_t*** %6, align 8
  store %struct.st_quicly_handshake_space_t* %20, %struct.st_quicly_handshake_space_t** %21, align 8
  %22 = icmp eq %struct.st_quicly_handshake_space_t* %20, null
  br i1 %22, label %23, label %25

23:                                               ; preds = %16
  %24 = load i32, i32* @PTLS_ERROR_NO_MEMORY, align 4
  store i32 %24, i32* %3, align 4
  br label %29

25:                                               ; preds = %16
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %27 = load i64, i64* %5, align 8
  %28 = call i32 @create_handshake_flow(%struct.TYPE_4__* %26, i64 %27)
  store i32 %28, i32* %3, align 4
  br label %29

29:                                               ; preds = %25, %23
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}

declare dso_local i64 @alloc_pn_space(i32) #1

declare dso_local i32 @create_handshake_flow(%struct.TYPE_4__*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
